Adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Olá, Mundo!</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam beatae ipsam architecto ad, perspiciatis, similique veniam doloribus minima quidem explicabo et amet incidunt dignissimos dolorum iste! Illum explicabo facere magnam.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolorum impedit eius commodi quis, autem temporibus ducimus neque vel facilis. Explicabo quo fugit mollitia culpa obcaecati tempora, nemo accusamus quis enim!</p>
 </body>
 </html>
